python/tests/gold/ratelimitv1test/snapshots/snapshot.yaml
{
    "Consul": {},
    "Kubernetes": {
        "AuthService": null,
        "ConsulResolver": null,
        "Host": null,
        "KubernetesEndpointResolver": null,
        "KubernetesServiceResolver": null,
        "LogService": null,
        "Mapping": null,
        "Module": null,
        "RateLimitService": null,
        "TCPMapping": null,
        "TLSContext": null,
        "TracingService": null,
        "ingresses": null,
        "service": [
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"ratelimitv1test\",\"scope\":\"AmbassadorTest\"},\"name\":\"rate-limit-v1\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"grpc\",\"port\":5000,\"targetPort\":\"grpc\"}],\"selector\":{\"app\":\"rate-limit-v1\"},\"type\":\"ClusterIP\"}}\n"
                    },
                    "creationTimestamp": "2020-01-10T16:55:29Z",
                    "labels": {
                        "kat-ambassador-id": "ratelimitv1test",
                        "scope": "AmbassadorTest"
                    },
                    "name": "rate-limit-v1",
                    "namespace": "default",
                    "resourceVersion": "60560",
                    "selfLink": "/api/v1/namespaces/default/services/rate-limit-v1",
                    "uid": "01d0a3b6-33ca-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.103.37.211",
                    "ports": [
                        {
                            "name": "grpc",
                            "port": 5000,
                            "protocol": "TCP",
                            "targetPort": "grpc"
                        }
                    ],
                    "selector": {
                        "app": "rate-limit-v1"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v1\nkind: RateLimitService\nname: ratelimit-v1\nservice: rate-limit-v1:5000\ntimeout_ms: 500\nambassador_id: ratelimitv1test\n",
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v1\\nkind: RateLimitService\\nname: ratelimit-v1\\nservice: rate-limit-v1:5000\\ntimeout_ms: 500\\nambassador_id: ratelimitv1test\\n\"},\"labels\":{\"app.kubernetes.io/component\":\"ambassador-service\",\"kat-ambassador-id\":\"ratelimitv1test\",\"scope\":\"AmbassadorTest\"},\"name\":\"rat [...]
                    },
                    "creationTimestamp": "2020-01-10T16:55:28Z",
                    "labels": {
                        "app.kubernetes.io/component": "ambassador-service",
                        "kat-ambassador-id": "ratelimitv1test",
                        "scope": "AmbassadorTest"
                    },
                    "name": "ratelimitv1test",
                    "namespace": "default",
                    "resourceVersion": "60542",
                    "selfLink": "/api/v1/namespaces/default/services/ratelimitv1test",
                    "uid": "0141f78b-33ca-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.104.88.134",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 31555,
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "nodePort": 30027,
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "service": "ratelimitv1test"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"ratelimitv1test\",\"scope\":\"AmbassadorTest\",\"service\":\"ratelimitv1test-admin\"},\"name\":\"ratelimitv1test-admin\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"ratelimitv1test-admin\",\"port\":8877,\"targetPort\":8877}],\"selector\":{\"service\":\"ratelimitv1test\"},\"type\":\"NodePort\"} [...]
                    },
                    "creationTimestamp": "2020-01-10T16:55:29Z",
                    "labels": {
                        "kat-ambassador-id": "ratelimitv1test",
                        "scope": "AmbassadorTest",
                        "service": "ratelimitv1test-admin"
                    },
                    "name": "ratelimitv1test-admin",
                    "namespace": "default",
                    "resourceVersion": "60552",
                    "selfLink": "/api/v1/namespaces/default/services/ratelimitv1test-admin",
                    "uid": "0184d026-33ca-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.96.213.20",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "ratelimitv1test-admin",
                            "nodePort": 31161,
                            "port": 8877,
                            "protocol": "TCP",
                            "targetPort": 8877
                        }
                    ],
                    "selector": {
                        "service": "ratelimitv1test"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v1\nkind: Mapping\nname: ratelimit_target_mapping\nprefix: /target/\nservice: ratelimitv1test-http\nlabels:\n  ambassador:\n  - request_label_group:\n    - x-ambassador-test-allow:\n        header: \"x-ambassador-test-allow\"\n        omit_if_not_present: true\nambassador_id: ratelimitv1test\n",
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v1\\nkind: Mapping\\nname: ratelimit_target_mapping\\nprefix: /target/\\nservice: ratelimitv1test-http\\nlabels:\\n  ambassador:\\n  - request_label_group:\\n    - x-ambassador-test-allow:\\n        header: \\\"x-ambassador-test-allow\\\"\\n        omit_if_not_present: true\\nambassador_i [...]
                    },
                    "creationTimestamp": "2020-01-10T16:55:30Z",
                    "labels": {
                        "kat-ambassador-id": "ratelimitv1test",
                        "scope": "AmbassadorTest"
                    },
                    "name": "ratelimitv1test-http",
                    "namespace": "default",
                    "resourceVersion": "60583",
                    "selfLink": "/api/v1/namespaces/default/services/ratelimitv1test-http",
                    "uid": "0247f6f1-33ca-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.109.177.131",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8114
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8477
                        }
                    ],
                    "selector": {
                        "backend": "superpod-default"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            }
        ]
    }
}
